@@ -22,10 +22,10 @@
 
 		<version.jboss.bom>1.0.7.Final</version.jboss.bom>
 		<version.surefire.plugin>2.10</version.surefire.plugin>
-		<version.war.plugin>2.1.1</version.war.plugin>
+		<version.war.plugin>3.2.3</version.war.plugin>
 
-		<maven.compiler.target>1.6</maven.compiler.target>
-		<maven.compiler.source>1.6</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
+		<maven.compiler.source>11</maven.compiler.source>
 
 		<sonar.host.url>http://localhost:9000/</sonar.host.url>
 		<sonar.exclusions>src/main/webapp/****/*.js</sonar.exclusions>
@@ -193,6 +193,25 @@
 			<version>2.1.3</version>
 		</dependency>
 
+		<!-- JAXB dependencies for Java 11+ -->
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jaxb</groupId>
+			<artifactId>jaxb-runtime</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+
+		<!-- JAX-WS dependencies for Java 11+ -->
+		<dependency>
+			<groupId>javax.jws</groupId>
+			<artifactId>javax.jws-api</artifactId>
+			<version>1.1</version>
+		</dependency>
+
 
 
 	</dependencies>
@@ -225,7 +244,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.19.1</version>
 				<configuration>
-					<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
+					<argLine>-Xms512m -Xmx1024m --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</argLine>
 
 					<includes>
 						<include>${test-classes}</include>
